// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`вставка контентных опций в чистом реакте Несколько корней 1`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      123
    </div>
    <div
      tabindex="0"
    >
      456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Один корень 1`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      123
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие в корне 1`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      123
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие в корне 2`] = `
<div>
  <div />
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие с else в корне 1`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      123
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте Условие с else в корне 2`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Несколько корней 1`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      123456
    </div>
    <div
      tabindex="0"
    >
      456456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Один корень 1`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      123456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Условие в корне 1`] = `
<div>
  <div>
    <div
      tabindex="0"
    >
      123456
    </div>
  </div>
</div>
`;

exports[`вставка контентных опций в чистом реакте передача дополнительных опций в контентную опцию Условие в корне 2`] = `
<div>
  <div />
</div>
`;
